# Simulation-BT

sim_bt/: CMakeLists.txt  package.xml
sim_bt/include/sim_bt/: at_task_n_node.hpp  check_locations_node.hpp  get_locations_node.hpp  go_to_n_node.hpp  pop_location_node.hpp
sim_bt/launch/: bt_launch.launch.py
sim_bt/maps/: small_room_map.yaml
sim_bt/params/: nav2_params.yaml
sim_bt/src/: at_task_n_node.cpp  check_locations_node.cpp  get_locations_node.cpp  go_to_n_node.cpp  main.cpp  main_bt_node.cpp.cpp  pop_location_node.cpp
sim_bt/trees/: my_tree.xml
sim_robot_description/: CMakeLists.txt  package.xml
sim_robot_description/config/: joy_params.yaml  my_controllers.yaml  nav2_rviz_config.rviz  rviz_config.rviz
sim_robot_description/launch/: gazebo.launch.py  robot_gazebo_test.launch.py  robot_rviz.launch.py  rviz.launch.py
sim_robot_description/urdf/: robot.urdf.xacro  robot_body.xacro  robot_body_testing.xacro  robot_gazebo_properties.xacro  robot_peripherals.xacro
sim_robot_description/worlds/: maze.world  small_room.world  test.world  test_positions.world
sim_robot_slam/: CMakeLists.txt  package.xml
sim_robot_slam/config/: params_slam.yaml
sim_robot_slam/launch/: slam.launch.py
sim_robot_slam/maps/: my_map.pgm  my_map.yaml
